add more logs